# tubes-cakrai-riset

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Configs/: Setup.h  Variables.h
Configurations/: Constants.h  Setup.h
KRAI_Library/: default_constants.h
KRAI_Library/Control4Roda/: Control4Omni.cpp  Control4Omni.h  Control4Roda.cpp  Control4Roda.h  ControlAutomatic4Mechanum.cpp  ControlAutomatic4Omni.cpp  ControlAutomatic4Omni.h
KRAI_Library/ControlMotor/: ControlMotor.cpp  ControlMotor.h
KRAI_Library/INA219/: INA219.cpp  INA219.h
KRAI_Library/JoystickPS3/: JoystickPS3.cpp  JoystickPS3.h
KRAI_Library/MovingAverage/: MovingAverage.cpp  MovingAverage.h
KRAI_Library/PIDAaronBerk/: PIDAaronBerk.cpp  PIDAaronBerk.h
KRAI_Library/PID_KRAI/: PID_KRAI.cpp  PID_KRAI.h
KRAI_Library/Pinout/: F407VET6_2023.h  F446RE_MASTER_2022.h
KRAI_Library/SMC_KRAI/: SMC_KRAI.cpp  SMC_KRAI.h
KRAI_Library/led4Pin/: led4Pin-digital.cpp  led4Pin-digital.h  led4Pin.cpp  led4Pin.h
KRAI_Library/odom2enc/: odom2enc.cpp  odom2enc.h
KRAI_Library/pidLo/: pidLo.cpp  pidLo.h
KRAI_Library/pneumaticKRAI/: pneumaticKRAI.h
KRAI_Library_tes/Control4Roda/: Control4Omni.h  ControlAutomatic4Omni.cpp
KRAI_Library_tes/ControlMotor/: ControlMotor.h
KRAI_Library_tes/encoderKRAI/: encoderKRAI.cpp
Master_Elephant2/: .gitignore  CMakeLists.txt  README.md  main.cpp  main_asli.cpp
Master_Elephant2/Configurations/: ConfigurationPin.h  Constants.h  Constants150.h  Constants97Cat.h  state.h
Master_Elephant2/Reloader/: Reloader.cpp  Reloader.h
Master_Elephant2/Shooter/: Shooter.cpp  Shooter.h  ThrowingMode.cpp  ThrowingMode.h
Master_Elephant2_tes/: mbed_config.h  utils.h
Master_Elephant2_tes/Configurations/: Variables.h
Master_Rabbit/: CMakeLists.txt  Makefile  README.md  main.cpp
Master_Rabbit/Configurations/: ConfigurationPin.h  Constants.h  Variables.h
ShooterMotor/: ShooterMotor.cpp  ShooterMotor.h
libs/Config/: Constants.h
libs/Configs/: ConfigurationPin.h  Constants.h
libs/Control4Roda/: Control4Omni.cpp  Control4Omni.h  Control4Roda.h
libs/MovingAverage/: MovingAverage.h
libs/encoderMotorSpeed/: EncodingM.h  encoderMotorSpeed.cpp  encoderMotorSpeed.h
libs/led4Pin/: led4Pin.cpp  led4Pin.h
libs/noPWMMotor/: noPWMMotor.cpp  noPWMMotor.h
projects/: README.md
projects/Omniwheel V1/: CMakeLists.txt  Makefile  main.cpp
projects/PDIP V1/: CMakeLists.txt  Makefile  main.cpp
projects/PDIP V2/: CMakeLists.txt  Makefile  main.cpp
projects/PDIP-OHU/: .gitignore  CMakeLists.txt  Makefile  main.cpp
projects/Shooter-V0/: CMakeLists.txt  Makefile  main.cpp
projects/Shooter-V1/: CMakeLists.txt  Makefile  main.cpp  mbed_app.json
projects/Shooter-V1 Final/: Makefile  main.cpp
projects/combine-sudut-pidfly/: CMakeLists.txt  Makefile  main.cpp  mbed_app.json
projects/test-led-4pin/: CMakeLists.txt  Makefile  main.cpp
projects/test-motor-sudut-limit/: CMakeLists.txt  main.cpp  mbed_app.json
projects/testing-coba-serial/: CMakeLists.txt  Makefile  main.cpp
projects/testing-combine-sudut-fly/: main.cpp
projects/testing-compile/: CMakeLists.txt  Makefile  main.cpp
projects/testing-cui/: CMakeLists.txt  main.cpp
projects/testing-esp-serial/: Makefile
projects/testing-gabung-1/: CMakeLists.txt  Makefile  encoderDoang.cpp  main.cpp  mainVersion1.cpp  mainVersion2.cpp
projects/testing-hello/: CMakeLists.txt  main.cpp
projects/testing-interrupt/: CMakeLists.txt  main.cpp  mbed_app.json
projects/testing-interruptFahmi/: CMakeLists.txt  Makefile  main.cpp
projects/testing-motor/: CMakeLists.txt  Makefile  main.cpp
projects/testing-motorConstSpeed/: CMakeLists.txt  Makefile  main.cpp
projects/testing-motorShooter/: CMakeLists.txt  data-test-5-agus-2023-19.25.csv  main.cpp  tes tenis 1.csv  tes tenis 2.csv  tes tenis 3 (dari 6 masuk 2).csv  tes tenis 4 (gk ad yg masuk).csv  tes tenis 5 main main.csv
projects/testing-omni/: CMakeLists.txt  main.cpp
projects/testing-read-serial/: CMakeLists.txt  Makefile  main.cpp  tmp.txt
projects/testing-realOmni/: CMakeLists.txt  Makefile  Sabtu-5-Agus-2023-16.05.csv  main.cpp  todo.cpp
projects/tuning-omni/: CMakeLists.txt  Makefile  main.cpp
(+71 files in other folders)
